--- a/src/styles/NoticiaShow.css
+++ b/src/styles/NoticiaShow.css
@@ -1,4 +1,4 @@
-.image-noticia{
+.image-noticia-show{
     width: auto !important;
     height: 450px;
     
@@ -9,5 +9,16 @@
 }
 
 .texto {
-    
+    white-space: pre-line;
+    white-space: pre-wrap;
+}
+
+.descripcion {
+    position: relative;
+}
+
+.btn-voz {
+    position: absolute;
+    top: 10px;
+    right: 5px;
 }
