--- a/src/styles/NoticiaShow.css
+++ b/src/styles/NoticiaShow.css
@@ -1,7 +1,6 @@
 .image-noticia-show{
     width: auto !important;
     height: 450px;
-    
 }
 
 .contenedor-image {
@@ -21,4 +20,18 @@
     position: absolute;
     top: 10px;
     right: 5px;
+}
+
+.containerNoticia-show {
+    margin-top: 15px;
+}
+
+@media only screen and (max-width: 990px) {
+    .image-noticia-show{
+        max-width: 100%;
+        height: auto;
+    }
+    .containerNoticia-show {
+        margin-top: 0px;
+    }
 }
